[package]
name = "linkedbytes"
version = "0.1.13"
authors = ["Volo Team <volo@cloudwego.io>"]
edition = "2021"
description = "LinkedBytes is a linked list of Bytes and BytesMut."
repository = "https://github.com/volo-rs/linkedbytes"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["network-programming"]
keywords = ["bytes", "rpc", "ioslice", "writev", "volo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
bytes = "1"
faststr = "0.2"
tokio = { version = "1", features = ["io-util"] }
